--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +11,21 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <div class="container">
+        <div class="row">
+            <button class="btn btn-primary mt-3" id="generate">Generate Die</button>
+        </div>
+        <div class="row diceboard">
+
+        </div>
+    </div>
 
 
 
     <!-- My script Tag -->
     <script src="dice.js"></script>
 </body>
+
 </html>
