--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
 <body>
     <div class="container">
-        <div class="row">
+        <div class="row buttonrow">
             <button class="btn btn-primary mt-3" id="generate">Generate Die</button>
+            <button class="btn btn-primary mt-3 ml-3" id="rolldice">Roll Dice</button>
         </div>
         <div class="row diceboard">
 
