adding sum die button

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <div class="row buttonrow">
             <button class="btn btn-primary mt-3" id="generate">Generate Die</button>
             <button class="btn btn-primary mt-3 ml-3" id="rolldice">Roll Dice</button>
+            <button class="btn btn-primary mt-3 ml-3" id="sumdice">Sum Dice</button>
         </div>
         <div class="row diceboard">
 
